kubernetes/configs/growingsewfast/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meta-test-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`growingsewfast.com`)
    kind: Rule
    services:
    - name: sw1-simpleweb
      port: 9001
  tls:
    secretName: growingsewfast-com-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meta-test-insecure
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`growingsewfast.com`)
    kind: Rule
    services:
    - name: sw1-simpleweb
      port: 9001
